# FusionNeo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: base.yaml
scripts/: benchmark_embeddings.py  embed_external_peptides.py  prepare_external_benchmark.py
src/fusionneo/: __init__.py  breakpoints.py  common.py  download.py  embed.py  masking.py  peptides.py  prepare.py  splits.py  train.py  uniprot.py
tests/: test_breakpoints.py  test_masking.py  test_peptides.py  test_splits.py
